--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
+    "@types/sha": "^3.0.5",
     "@vitejs/plugin-react": "^4.2.1",
+    "js-sha256": "^0.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
